--- a/concorrencia-app/src/styles.css
+++ b/concorrencia-app/src/styles.css
@@ -1,1 +1,31 @@
+@import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
+@import '../node_modules/bootswatch/dist/cosmo/bootstrap.min.css';
+@import'../node_modules/@fortawesome/fontawesome-free/css/all.min.css';
+
+.body {
+  padding-bottom: 20px;
+}
+
+.navbar {
+  margin-bottom: 20px;
+}
+.btnSalvar {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 15px;
+  text-decoration: none;
+  text-align: center;
+}
+.lblBox{
+  text-align: left;
+}
 /* You can add global styles to this file, and also import other style files */
