--- a/concorrencia-app/src/app/bandeira/bandeira.component.html
+++ b/concorrencia-app/src/app/bandeira/bandeira.component.html
@@ -39,7 +39,7 @@
           <td>{{bandeira.nomeBandeira}}</td>
           <td>
             <div class="btn-group">
-              <button class="btn btn-sm btn-danger" tooltip="Excluir">
+              <button class="btn btn-sm btn-danger" tooltip="Excluir" (click)="deleteBandeira(bandeira)">
                 <i class="fa fa-eraser"></i>
               </button>
             </div>
