--- a/concorrencia-app/src/app/menu/menu.component.html
+++ b/concorrencia-app/src/app/menu/menu.component.html
@@ -1,80 +1,92 @@
-  <div class="row" style="text-align: center; align-items: center;">
-    <div class="col" style="width: 33%;">
-      <div class="card">
-        <div class="card-header" style="font-size: 2.2vw;">
-          Bandeira
-        </div>
-        <div class="card-body">
-          <a href="#" class="btn btn-sm btn-success" routerLink="../bandeira" style="font-size: 2.2vw;">Cadastrar</a>
-        </div>
-      </div>
+<div class="container mt-4">
+  <div class="row mbr-justify-content-center">
+    <div class="col-lg-6 mbr-col-md-10">
+            <a href="bandeira" routerlink="../bandira" class="wrap">
+                <div class="ico-wrap">
+                    <span class="mbr-iconfont fa-flag fa"></span>
+                </div>
+                <div class="text-wrap vcenter">
+                    <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">Bandeira</h2>
+                    <p class="mbr-fonts-style text1 mbr-text display-6">Utilize para cadastrar uma nova bandeira</p>
+                </div>
+            </a>
     </div>
-    <div class="col" style="width: 33%;">
-      <div class="card">
-        <div class="card-header" style="font-size: 2.2vw;">
-          Região
-        </div>
-        <div class="card-body">
-          <a href="#" class="btn btn-sm btn-success" routerLink="../regiao" style="font-size: 2.2vw;">Cadastrar</a>
-        </div>
-      </div>
+    <div class="col-lg-6 mbr-col-md-10">
+            <a href="regiao" routerlink="../regiao" class="wrap">
+                <div class="ico-wrap">
+                    <span class="mbr-iconfont fa-globe fa"></span>
+                </div>
+                <div class="text-wrap vcenter">
+                    <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">Região</h2>
+                    <p class="mbr-fonts-style text1 mbr-text display-6">Utilize para cadastrar uma nova região</p>
+                </div>
+              </a>
     </div>
-    <div class="col" style="width: 33%;">
-      <div class="card">
-        <div class="card-header" style="font-size: 2.2vw;">
-          Resultado
-        </div>
-        <div class="card-body">
-          <a href="#" class="btn btn-sm btn-success" routerLink="../financeiro" style="font-size: 2.2vw;">Cadastrar</a>
-        </div>
-      </div>
+    <div class="col-lg-6 mbr-col-md-10">
+          <a href="posto" routerlink="../posto" class="wrap">
+              <div class="ico-wrap">
+                  <span class="mbr-iconfont fas fa-gas-pump fa"></span>
+              </div>
+              <div class="text-wrap vcenter">
+                  <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">Posto</h2>
+                  <p class="mbr-fonts-style text1 mbr-text display-6">Utilize para cadastrar um novo posto</p>
+              </div>
+            </a>
+    </div>
+    <div class="col-lg-6 mbr-col-md-10">
+          <a href="compra" routerlink="../compra" class="wrap">
+              <div class="ico-wrap">
+                  <span class="mbr-iconfont far fa-money-bill-alt"></span>
+              </div>
+              <div class="text-wrap vcenter">
+                  <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">Preço de Compra</h2>
+                  <p class="mbr-fonts-style text1 mbr-text display-6">Utilize para atualizar os preços de compra</p>
+              </div>
+            </a>
+    </div>
+    <div class="col-lg-6 mbr-col-md-10">
+          <a href="venda" routerlink="../venda" class="wrap">
+              <div class="ico-wrap">
+                  <span class="mbr-iconfont far fa-money-bill-alt"></span>
+              </div>
+              <div class="text-wrap vcenter">
+                  <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">Preço de Venda</h2>
+                  <p class="mbr-fonts-style text1 mbr-text display-6">Utilize para atualizar os preços de venda</p>
+              </div>
+          </a>
+    </div>
+    <div class="col-lg-6 mbr-col-md-10">
+          <a href="distribuidora" routerlink="../precoBandeira" class="wrap">
+              <div class="ico-wrap">
+                  <span class="mbr-iconfont far fa-money-bill-alt"></span>
+              </div>
+              <div class="text-wrap vcenter">
+                  <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">Preço Distribuidora</h2>
+                  <p class="mbr-fonts-style text1 mbr-text display-6">Utilize para atualizar preços de distribuição</p>
+              </div>
+          </a>
+    </div>
+    <div class="col-lg-6 mbr-col-md-10">
+          <a href="precos" routerlink="../gestaoPrecos" class="wrap">
+              <div class="ico-wrap">
+                  <span class="mbr-iconfont fa-volume-up fa"></span>
+              </div>
+              <div class="text-wrap vcenter">
+                  <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">Painel de Preços</h2>
+                  <p class="mbr-fonts-style text1 mbr-text display-6">Utilize para acopanahar atualização dos preços</p>
+              </div>
+          </a>
+    </div>
+    <div class="col-lg-6 mbr-col-md-10">
+      <a href="financeiro" routerlink="../financeiro" class="wrap">
+          <div class="ico-wrap">
+              <span class="mbr-iconfont fas fa-balance-scale"></span>
+          </div>
+          <div class="text-wrap vcenter">
+              <h2 class="mbr-fonts-style mbr-bold mbr-section-title3 display-5">Meta de Despesas</h2>
+              <p class="mbr-fonts-style text1 mbr-text display-6">Utilize inserir meta de despesas</p>
+          </div>
+      </a>
     </div>
   </div>
-  <div class="row"  style="text-align: center; padding-top: 5px;">
-    <div class="col" style="width: 33%;">
-      <div class="card">
-        <div class="card-header" style="font-size: 2.2vw;">
-          Posto
-        </div>
-        <div class="card-body">
-          <a href="#" class="btn btn-sm btn-success" routerLink="../posto" style="font-size: 2.2vw;">Cadastrar</a>
-        </div>
-      </div>
-    </div>
-    <div class="col" style="width: 33%;">
-      <div class="card">
-        <div class="card-header" style="font-size: 2.2vw;">
-          Compra
-        </div>
-        <div class="card-body">
-          <a href="#" class="btn btn-sm btn-success" routerLink="../compra" style="font-size: 2.2vw;">Cadastrar</a>
-        </div>
-      </div>
-    </div>
-    <div class="col" style="width: 33%;">
-    </div>
-  </div>
-  <div class="row" style="text-align: center; padding-top: 5px;">
-    <div class="col" style="width: 33%;">
-      <div class="card">
-        <div class="card-header" style="font-size: 2.2vw;">
-          Venda
-        </div>
-        <div class="card-body">
-          <a href="#" class="btn btn-sm btn-success" routerLink="../venda" style="font-size: 2.2vw;">Cadastrar</a>
-        </div>
-      </div>
-    </div>
-    <div class="col" style="width: 33%;">
-      <div class="card">
-        <div class="card-header" style="font-size: 2.2vw;">
-          Distribuidora
-        </div>
-        <div class="card-body">
-          <a href="#" class="btn btn-sm btn-success" routerLink="../precoDistribuidora" style="font-size: 2.2vw;">Cadastrar</a>
-        </div>
-      </div>
-    </div>
-    <div class="col" style="width: 33%;">
-    </div>
-  </div>
+</div>
