--- a/concorrencia-app/src/app/nav/nav.component.html
+++ b/concorrencia-app/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-md navbar-light bg-light" *ngIf="showMenu()">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark" *ngIf="showMenu()">
   <div class="container">
-    <a class="nav-link" routerLink="menu">Gestão de Preços</a>
+    <a class="nav-link fas fa-bars" routerLink="menu"> Menu Principal</a>
     <div *ngIf="false"  class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item" routerLinkActive="active">
