--- a/concorrencia-app/src/app/regiao/regiao.component.html
+++ b/concorrencia-app/src/app/regiao/regiao.component.html
@@ -52,7 +52,7 @@
             <td>{{regiao.nomeRegiao}}</td>
             <td>
               <div class="btn-group">
-                <button class="btn btn-sm btn-danger" tooltip="Excluir">
+                <button class="btn btn-sm btn-danger" tooltip="Excluir" (click)="delteRegiao(regiao)">
                   <i class="fa fa-eraser"></i>
                 </button>
               </div>
